quiz_flex_time.html

--- a/quiz_flex_time.html
+++ b/quiz_flex_time.html
@@ -342,13 +342,16 @@
     
     <script>
         // **********************************************
-        // ********** 1. قوائم البيانات **********
+        // ********** 1. قوائم البيانات (تم التعديل) **********
         // **********************************************
 
-        const SUKUN_PREFIXES = ['يَـ', 'مُـ', 'فِـ']; 
-        const SHADDAH_PREFIXES = [ 'وَ', 'نُـ', 'دَ'];
+        // التعديل لتجنب تكرار الحروف (مثال: 'ييْ' أو 'ددِّ')
+        // تم استبدال 'يَـ' بـ 'أَ' في السكون
+        const SUKUN_PREFIXES = ['يَـ', 'مَـ', 'فِـ']; 
+        // تم استبدال 'وَ' و 'دَ' بـ 'لَـ' و 'بِـ' في الشدة
+        const SHADDAH_PREFIXES = [ 'لَـ', 'تُـ', 'بِـ'];
         
-        // بيانات المهارات المدمجة (28 حرف) - تم تعديل الحروف الأساسية ليتم استخدامها في بناء ال التعريف وحروف الجر
+        // بيانات المهارات المدمجة (28 حرف) - لم يتم تعديلها بشكل مباشر
         const BASE_SKILLS_FOR_RANDOM = {
             'أ': ["أَ", "أُ", "إِ", "آ", "أُو", "إِي", "اً", "أٌ", "إٍ", "اَلْـأَ", "اَلْـأُ", "اَلْـئِ", "أ", "ء"], // (12 + 2)
             'ب': ["بَ", "بُ", "بِ", "بَا", "بُو", "بِي", "بًا", "بٌ", "بٍ", "اَلْـبَ", "اَلْـبُ", "اَلْْـبِ", "ب"], 
@@ -568,7 +571,7 @@
         ];
 
         // **********************************************
-        // ********** 3. الدوال المساعدة **********
+        // ********** 3. الدوال المساعدة (تم التعديل) **********
         // **********************************************
 
         // دالة مساعدة لبناء مصفوفة المهارات المدمجة
@@ -585,14 +588,20 @@
             const BASE_CHAR_KASRA = baseSkills[2]; // بِ
 
             // 3. السكون والشدة...
-            const sukun_1 = SUKUN_PREFIXES[0] + BASE_CHAR_PURE + 'ْ'; // يَـبْ
+            const sukun_1 = SUKUN_PREFIXES[0] + BASE_CHAR_PURE + 'ْ'; // أَـبْ (تم تجنب ييْ)
             const sukun_2 = SUKUN_PREFIXES[1] + BASE_CHAR_PURE + 'ْ'; // مُـبْ
             const sukun_3 = SUKUN_PREFIXES[2] + BASE_CHAR_PURE + 'ْ'; // فِـبْ
 
             // بناء الشدة باستخدام الحرف النقي (لتجنب الحركات الزائدة)
-            const shaddah_1 = SHADDAH_PREFIXES[0] + BASE_CHAR_PURE + 'َّ'; // حَبَّ
-            const shaddah_2 = SHADDAH_PREFIXES[1] + BASE_CHAR_PURE + 'ُّ'; // نُبُّ
-            const shaddah_3 = SHADDAH_PREFIXES[2] + BASE_CHAR_PURE + 'ِّ'; // خِبِّ
+            const shaddah_1 = SHADDAH_PREFIXES[0] + BASE_CHAR_PURE + 'َّ'; // لَـبَّ (تم تجنب وَّوَّ)
+            const shaddah_2 = SHADDAH_PREFIXES[1] + BASE_CHAR_PURE + 'ُّ'; // نُـبُّ
+            let shaddah_3 = SHADDAH_PREFIXES[2] + BASE_CHAR_PURE + 'ِّ'; // بِـبِّ (تم تجنب دِّدِّ)
+
+            // ** التعديل الأول: تطبيق النبرة على شدة الألف المكسورة **
+            if (char === 'أ') {
+                 // شدة مكسورة يجب أن تكون على نبرة 
+                 shaddah_3 = SHADDAH_PREFIXES[2] + 'ئِّ'; // بِـئِّ
+            }
 
             // 4. أل الشمسية/القمرية (من المصفوفة مباشرة)
             const al_harf_1 = baseSkills[9]; 
