--- a/quiz_flex_time.html
+++ b/quiz_flex_time.html
@@ -346,9 +346,7 @@
         // **********************************************
 
         // التعديل لتجنب تكرار الحروف (مثال: 'ييْ' أو 'ددِّ')
-        // تم استبدال 'يَـ' بـ 'أَ' في السكون
         const SUKUN_PREFIXES = ['أَـ', 'مَـ', 'فِـ']; 
-        // تم استبدال 'وَ' و 'دَ' بـ 'لَـ' و 'تُـ' بـ 'نُـ' في الشدة
         const SHADDAH_PREFIXES = [ 'لَـ', 'نُـ', 'بِـ'];
         
         // بيانات المهارات المدمجة (28 حرف) - لم يتم تعديلها بشكل مباشر
@@ -599,14 +597,17 @@
 
             // ** التعديلات الخاصة بحرف الألف (الهمزة) **
             if (char === 'أ') {
-                 // ** التعديل الإملائي الأول: السكون المكسور على نبرة **
-                 sukun_3 = SUKUN_PREFIXES[2] + 'ئْ'; // فِئْـ
+                 // ** التعديل الإملائي 1: السكون المكسور على نبرة وشكل متصل **
+                 sukun_3 = SUKUN_PREFIXES[2] + 'ئْـ'; // فِئْـ
                  
-                 // ** التعديل الإملائي الثاني: الشدة المضمومة على واو **
+                 // ** التعديل الإملائي 2: الشدة المضمومة على واو **
                  shaddah_2 = SHADDAH_PREFIXES[1] + 'ؤُّ'; // نُؤُّ
 
-                 // (التعديل السابق) شدة مكسورة يجب أن تكون على نبرة 
-                 shaddah_3 = SHADDAH_PREFIXES[2] + 'ئِّ'; // بِـئِّ
+                 // ** التعديل الإملائي 3: الشدة المكسورة على نبرة وشكل متصل **
+                 shaddah_3 = SHADDAH_PREFIXES[2] + 'ئِّـ'; // بِئِّـ
+            } else {
+                 // ** تحسين شكل السكون والشدة للحروف العادية أيضاً بإضافة الشرطة في السكون فقط **
+                 sukun_3 = SUKUN_PREFIXES[2] + BASE_CHAR_PURE + 'ْـ'; // فِـبْـ
             }
 
             // 4. أل الشمسية/القمرية (من المصفوفة مباشرة)
@@ -667,12 +668,13 @@
 
                 extra_5 = 'فَالْـ' + BASE_CHAR_DHAMMA; // مثال: فَالْـبُ
 
-                // التعديل الخاص بحرف الألف (الهمزة)
+                // ** التعديلات الخاصة بحرف الألف (الهمزة) **
                 if (char === 'أ') {
                     extra_1 = 'بِالْـأَ'; 
                     extra_2 = 'وَالْـأُ'; 
-                    // تعديل الهمزة المكسورة لتصبح على نبرة بعد الكاف واللام 
+                    // ** التعديل الإملائي 4: كَـ + الإِ على نبرة **
                     extra_3 = 'كَالْـئِ'; 
+                    // ** التعديل الإملائي 5: لِـ + الإِ على نبرة **
                     extra_4 = 'لِلْـئِ'; 
                     extra_5 = 'فَالْـأُ'; 
                 }
@@ -683,11 +685,11 @@
                 baseSkills[0], baseSkills[1], baseSkills[2], 
                 baseSkills[3], baseSkills[4], baseSkills[5], 
                 baseSkills[6], baseSkills[7], baseSkills[8], 
-                sukun_1, sukun_2, sukun_3, // تم تعديل sukun_3 هنا
-                shaddah_1, shaddah_2, shaddah_3, // تم تعديل shaddah_2 و shaddah_3 هنا
+                sukun_1, sukun_2, sukun_3, // فِئْـ
+                shaddah_1, shaddah_2, shaddah_3, // نُؤُّ، بِئِّـ
                 al_harf_1, al_harf_2, al_harf_3, 
-                extra_1, extra_2, extra_3, 
-                extra_4, extra_5, '', 
+                extra_1, extra_2, extra_3, // كَالْـئِ
+                extra_4, extra_5, '', // لِلْـئِ
             ];
 
             return combined.join(' ');
