quiz_flex_time.html

--- a/quiz_flex_time.html
+++ b/quiz_flex_time.html
@@ -352,7 +352,7 @@
         // بيانات المهارات المدمجة (28 حرف) - لم يتم تعديلها بشكل مباشر
         const BASE_SKILLS_FOR_RANDOM = {
             'أ': ["أَ", "أُ", "إِ", "آ", "أُو", "إِي", "اً", "أٌ", "إٍ", "اَلْـأَ", "اَلْـأُ", "اَلْـإِ", "أ", "ء"], // (12 + 2)
-            'ب': ["بَ", "بُ", "بِ", "بَا", "بُو", "بِي", "بًا", "بٌ", "بٍ", "اَلْـبَ", "اَلْـبُ", "اَلْْـبِ", "ب"], 
+            'ب': ["بَ", "بُ", "بِ", "بَا", "بُو", "بِي", "بًا", "بٌ", "بٍ", "اَلْـبَ", "اَلْـبُ", "اَلْـبِ", "ب"], 
             'ت': ["تَ", "تُ", "تِ", "تَا", "تُو", "تِي", "تًا", "تٌ", "تٍ", "اَلتَّـ", "اَلتُّـ", "اَلتِّـ", "ت"],
             'ث': ["ثَ", "ثُ", "ثِ", "ثَا", "ثُو", "ثِي", "ثًا", "ثٌ", "ثٍ", "اَلثَّـ", "اَلثُّـ", "اَلثِّـ", "ث"],
             'ج': ["جَ", "جُ", "جِ", "جَا", "جُو", "جِي", "جًا", "جٌ", "جٍ", "اَلْـجَ", "اَلْـجُ", "اَلْـجِ", "ج"], 
@@ -597,7 +597,7 @@
 
             // ** التعديلات الخاصة بحرف الألف (الهمزة) **
             if (char === 'أ') {
-                 // ** التعديل الإملائي 1: السكون المكسور على نبرة وشكل متصل **
+                 // ** التعديل الإملائي 1: السكون المكسور على نبرة وشكل متصل (مطلوب في الخانات الأخرى) **
                  sukun_3 = SUKUN_PREFIXES[2] + 'ئْـ'; // فِئْـ
                  
                  // ** التعديل الإملائي 2: الشدة المضمومة على واو **
@@ -672,10 +672,10 @@
                 if (char === 'أ') {
                     extra_1 = 'بِالْـأَ'; 
                     extra_2 = 'وَالْـأُ'; 
-                    // ** التعديل الإملائي 4: كَـ + الإِ على نبرة **
-                    extra_3 = 'كَالْـئِ'; 
-                    // ** التعديل الإملائي 5: لِـ + الإِ على نبرة **
-                    extra_4 = 'لِلْـئِ'; 
+                    // ** التعديل الإملائي المطلوب (الثالث): كَـ + الْـإِ **
+                    extra_3 = 'كَالْـإِ'; 
+                    // ** التعديل الإملائي المطلوب (الثالث): لِـ + الْـإِ **
+                    extra_4 = 'لِلْـإِ'; 
                     extra_5 = 'فَالْـأُ'; 
                 }
             }
@@ -688,8 +688,8 @@
                 sukun_1, sukun_2, sukun_3, // فِئْـ
                 shaddah_1, shaddah_2, shaddah_3, // نُؤُّ، بِئِّـ
                 al_harf_1, al_harf_2, al_harf_3, 
-                extra_1, extra_2, extra_3, // كَالْـئِ
-                extra_4, extra_5, '', // لِلْـئِ
+                extra_1, extra_2, extra_3, // كَالْـإِ (تم التعديل الثالث)
+                extra_4, extra_5, '', // لِلْـإِ (تم التعديل الثالث)
             ];
 
             return combined.join(' ');
