--- a/quiz_flex_time.html
+++ b/quiz_flex_time.html
@@ -216,14 +216,14 @@
                  <div class="input-group" id="duration-group" style="flex: 1;">
                     <label for="duration-select">مدة عرض العنصر (بالثواني):</label>
                     <select id="duration-select">
+                        <option value="2000">2 ثوانٍ</option>
                         <option value="3000">3 ثوانٍ</option>
                         <option value="5000">5 ثوانٍ</option>
-                        <option value="7000">7 ثوانٍ</option>
                         <option value="10000" selected>10 ثوانٍ</option> 
-                        <option value="15000">15 ثانية</option>
-                        <option value="20000">20 ثانية</option>
                         <option value="30000">30 ثانية</option>
-                        <option value="60000">1 دقيقة</option>
+                        <option value="60000"> دقيقة</option>
+                        <option value="120000">دقيقتان</option>
+                        <option value="180000">3 دقيقة</option>
                     </select>
                     <small id="duration-tip" style="color: #666;">يحدد سرعة الانتقال التلقائي.</small>
                 </div>
