quiz_flex_time.html

--- a/quiz_flex_time.html
+++ b/quiz_flex_time.html
@@ -609,8 +609,8 @@ const SENTENCES_ARRAY = ["ٱلشَّمْسُ أَشْرَقَتْ.", "ٱلْقَ
                 'السكون',          
                 'الشدة',           
                 'الـ الشمسية/القمرية', 
-                'دخول ب/و/ك على الـ',  
-                'دخول ل/ف على الـ'     
+                'دخول ب/ل/ك على الـ',  
+                'دخول و/ف على الـ'     
             ];
 
             itemNumberTop.style.display = 'block';
