--- a/quiz_flex_time.html
+++ b/quiz_flex_time.html
@@ -654,14 +654,15 @@ const SENTENCES_ARRAY = ["ٱلشَّمْسُ أَشْرَقَتْ.", "ٱلْقَ
                         // استبدال المربع الثاني في السطر السابع بالمربع الأول في السطر الثامن
                         if (row === 6 && col === 1) {
                             // المربع الثاني في السطر السابع - نستبدله بالمربع الأول من السطر الثامن
-                            const charFromRow6 = individualChars[10] || ''; // المربع الأول من السطر الثامن (index 10)
-                            const displayChar = charFromRow6.trim() === '' ? '&nbsp;' : charFromRow6;
+                            const charFromRow15 = individualChars[21] || ''; // المربع الأول من السطر الثامن (index 21)
+                            const displayChar = charFromRow15.trim() === '' ? '&nbsp;' : charFromRow15;
                             htmlContent += `<div class="grid-cell" style="grid-row: ${row + 1}; grid-column: ${col + 2}; border-color: #a0c0e0;">${displayChar}</div>`;
                             skillIndexCounter++; // نزيد العداد فقط مرة واحدة
                         } else if (row === 7 && col === 0) {
                             // المربع الأول في السطر الثامن - نستبدله بالمربع الثاني من السطر السابع
-                            const charFromRow6 = individualChars[22] || ''; // المربع الثاني من السطر السابع (index 22)
-                            const displayChar = charFromRow6.trim() === '' ? '&nbsp;' : charFromRow6;
+                            const charFromRow13
+                                = individualChars[19] || ''; // المربع الثاني من السطر السابع (index 19)
+                            const displayChar = charFromRow13.trim() === '' ? '&nbsp;' : charFromRow13;
                             htmlContent += `<div class="grid-cell" style="grid-row: ${row + 1}; grid-column: ${col + 2}; border-color: #a0c0e0;">${displayChar}</div>`;
                             skillIndexCounter++; // نزيد العداد فقط مرة واحدة
                         } else {
