quiz_flex_time.html

--- a/quiz_flex_time.html
+++ b/quiz_flex_time.html
@@ -341,7 +341,7 @@
     // [0-2] حركات قصيرة | [3-5] مدود | [6-8] تنوين | [9-11] سكون | [12-14] شدة | [15-17] الـ التعريف | [18-20] ب/و/ك + الـ | [21-23] ل/ف + الـ | [24] الحرف الأصلي
     const BASE_SKILLS_FOR_RANDOM = {
         'أ': ["أَ", "أُ", "إِ", "آ", "أُو", "إِي", "اً", "أٌ", "إٍ", "يَـأْ", "مَـأْ", "فِئْـ", "لَأَّ", "تُؤُّ", "بِئِّـ", "اَلْأَ", "اَلْأُ", "اَلْإِ", "بِالْأَ", "وَالْأُ", "كَالْإِ", "لِلْإِ", "فَالْأُ", "", "أ", ""], 
-        'ب': ["بَ", "بُ", "بِ", "بَا", "بُو", "بِي", "بًا", "بٌ", "بٍ", "يَـبْـ", "مُـبْـ", "فِـبْـ", "لَـبَّـ", "تُـبُّـ", "نِـبِّـ", "اَلْـبَـ", "اَلْـبُـ", "اَلْـبِـ", "بِالْـبَـ", "وَالْـبُـ", "كَالْـبِـ", "لِلْـبِـ", "فَالْـبُـ", "", "ب", ""], 
+        'ب': ["بَ", "بُ", "بِ", "بَا", "بُو", "بِي", "بًا", "بٌ", "بٍ", "يَـبْـ", "مُـبْـ", "فِـبْـ", "لَـبَّـ", "تُـبُّـ", "نِـبِّـ", "اَلْـبَـ", "اَلْـبُـ", "اَلْـبِـ", "بِالْـبَـ", "لِلْبِـ", "كَالْـبِـ", "والْبُـ", "فَالْـبُـ", "", "ب", ""], 
         'ت': ["تَ", "تُ", "تِ", "تَا", "تُو", "تِي", "تًا", "تٌ", "تٍ", "يَـتْـ", "مُـتْـ", "فِـتْـ", "لَـتَّـ", "نُـتُّـ", "بِـتِّـ", "اَلتَّـ", "اَلتُّـ", "اَلتِّـ", "بِالتَّـ", "وَالتُّـ", "كَالتِّـ", "لِلتِّـ", "فَالتُّـ", "", "ت", ""],
         'ث': ["ثَ", "ثُ", "ثِ", "ثَا", "ثُو", "ثِي", "ثًا", "ثٌ", "ثٍ", "يَـثْـ", "مُـثْـ", "فِـثْـ", "لَـثَّـ", "تُـثُّـ", "بِـثِّـ", "اَلثَّـ", "اَلثُّـ", "اَلثِّـ", "بِالثَّـ", "وَالثُّـ", "كَالثِّـ", "لِلثِّـ", "فَالثُّـ", "", "ث", ""],
         'ج': ["جَ", "جُ", "جِ", "جَا", "جُو", "جِي", "جًا", "جٌ", "جٍ", "يَـجْـ", "مُـجْـ", "فِجْـ", "لَـجَّـ", "تُـجُّـ", "بِـجِّـ", "اَلْـجَـ", "اَلْـجُـ", "اَلْـجِـ", "بِالْـجَـ", "وَالْـجُـ", "كَالْْـجِـ", "لِلْـجِـ", "فَالْـجُـ", "", "ج", ""], 
