quiz_flex_time.html

--- a/quiz_flex_time.html
+++ b/quiz_flex_time.html
@@ -215,8 +215,8 @@
                 <div class="input-group" style="flex: 1;">
                     <label for="mode-select">طريقة الانتقال:</label>
                     <select id="mode-select">
-                        <option value="auto" selected>تلقائي (حسب المؤقت)</option>
-                        <option value="manual">يدوي (بالنقر على زر)</option>
+                        <option value="auto" >تلقائي (حسب المؤقت)</option>
+                        <option value="manual"selected >يدوي (بالنقر على زر)</option>
                     </select>
                 </div>
             </div>
