--- a/training_2.html
+++ b/training_2.html
@@ -292,7 +292,7 @@
 
         <div class="round-setup" id="training-setup">
             
-            <label for="initial-level-select">المستوى الأولي:</label>
+            <label for="initial-level-select">المستوى:</label>
             <select id="initial-level-select">
                 <option value="1">المستوى 1</option>
                 <option value="2">المستوى 2</option>
