--- a/index.html
+++ b/index.html
@@ -1233,7 +1233,7 @@
             <div class="teacher-info">
                 <div class="info-item">
                     <i class="fas fa-chalkboard-teacher"></i>
-                    <span id="teacherName">أحمد محمد</span>
+                    <span id="teacherName">عبدالعزيز الحجيلي</span>
                 </div>
                 <div class="info-item">
                     <i class="fas fa-book"></i>
