--- a/index.html
+++ b/index.html
@@ -1612,11 +1612,11 @@
         // ================ قاعدة البيانات ================
         let db = JSON.parse(localStorage.getItem('finalPlatformDB')) || { 
             classes: {
-                class1: { name: 'الصف الأول', students: {} },
-                class2: { name: 'الصف الثاني', students: {} },
-                class3: { name: 'الصف الثالث', students: {} }
+                class1: { name: 'الصف رابع/١', students: {} },
+                class2: { name: 'الصف رابع /٢', students: {} },
+                class3: { name: 'الصف رابع/٣', students: {} }
             },
-            teacherName: 'أحمد محمد',
+            teacherName: 'عبدالعزيز الحجيلي ',
             subject: 'الرياضيات',
             actionTypes: ACTION_TYPES,
             buttonCount: 10,
